[project]
name = "gym-pusht"
version = "0.1.6"
description = "A gymnasium environment for PushT."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Rémi Cadène", email = "re.cadene@gmail.com"},
    {name = "Quentin Gallouédec", email = "quentin.gallouedec@ec-lyon.fr"},
    {name = "Alexander Soare", email = "alexander.soare159@gmail.com"},
    {name = "Simon Alibert", email = "alibert.sim@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "gymnasium>=0.29.1",
    "opencv-python>=4.9.0",
    "pygame>=2.5.2",
    "pymunk>=6.6.0",
    "shapely>=2.0.3",
    "scikit-image>=0.22.0",
]

[project.optional-dependencies]
dev = ["pre-commit>=3.7.0", "debugpy>=1.8.1"]
test = ["pytest>=8.1.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
    "example.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]
ignore-init-module-imports = true
